# hello_world

./: pyproject.toml  shell.nix
.nix-shell/db/: current_logfiles  postgresql.conf
.nix-shell/db/base/1/: 13396
.nix-shell/db/base/5/: 2619
.nix-shell/db/global/: 1260  1260_vm  1262  2671  2672  2676  pg_control
.nix-shell/db/pg_stat/: pgstat.stat
hello_world/: settings.py
